# miniBUDE

./: .clang-format  .gitignore  ACKNOWLEDGEMENTS.txt  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  heatmap.py
.github/workflows/: main.yaml
chapel/: .gitignore  Bude.chpl  Makefile  README.md
cmake/: extract_compile_command.cmake  git_watcher.cmake  register_models.cmake
cmake/Modules/: FindComputeCpp.cmake
cuda/: Makefile  README.md  bude.c  bude_cuda.cu  make.deps  shared.c
data/: .gitignore  README.md
data/bm2_long/: params.txt
kokkos/: .gitignore  CMakeLists.txt  README.md
kokkos/src/: bude.cpp  bude.h  vec-pose-inner.cpp
makedeck/: .gitignore  CMakeLists.txt  README.md  bude.cpp  input-utils.cpp  kernel.cpp  kernel.h  main.cpp  make-bude-input.cpp  make-bude-input.h  make-bude-kernel.cpp  make-bude-kernel.h  ref-kernel.cpp  ref-kernel.h  test-bude.cpp
makedeck/raw/bhffs/: 0_force_field.bhff  1_heavy_atom_060813.bhff  2_heavy_by-atom_2016-v1.bhff  3_heavy_by-atom_2017-v1.bhff  4_heavy_by-residue_2016-v1.bhff  5_heavy_by-residue_2017-v1.bhff  6_heavy_hybrid_2016-v1.bhff  7_heavy_hybrid_2017-v1.bhff
makedeck/raw/mol2s/: 0_1GCZ_R01_S0001_C0000_L00001_S0001_C0000_G0010_E0001.mol2  1000_1GCZ_R01_S0001_C0000_L00017_S0001_C0029_G0010_E0001.mol2  1001_1GCZ_R01_S0001_C0000_L00017_S0001_C0029_G0010_E0001.mol2  1002_1GCZ_R01_S0001_C0000_L00017_S0001_C0030_G0010_E0001.mol2  1003_1GCZ_R01_S0001_C0000_L00017_S0001_C0030_G0010_E0001.mol2  1004_1GCZ_R01_S0001_C0000_L00017_S0001_C0031_G0010_E0001.mol2  1005_1GCZ_R01_S0001_C0000_L00017_S0001_C0031_G0010_E0001.mol2  1006_1GCZ_R01_S0001_C0000_L00017_S0001_C0032_G0010_E0001.mol2  1007_1GCZ_R01_S0001_C0000_L00017_S0001_C0032_G0010_E0001.mol2  1008_1GCZ_R01_S0001_C0000_L00017_S0001_C0033_G0010_E0001.mol2  1009_1GCZ_R01_S0001_C0000_L00017_S0001_C0033_G0010_E0001.mol2  100_1GCZ_R01_S0001_C0000_L00003_S0001_C0038_G0010_E0001.mol2  1010_1GCZ_R01_S0001_C0000_L00017_S0001_C0034_G0010_E0001.mol2  1011_1GCZ_R01_S0001_C0000_L00017_S0001_C0034_G0010_E0001.mol2  1012_1GCZ_R01_S0001_C0000_L00017_S0001_C0035_G0010_E0001.mol2  1013_1GCZ_R01_S0001_C0000_L00017_S0001_C0035_G0010_E0001.mol2  1014_1GCZ_R01_S0001_C0000_L00017_S0001_C0036_G0010_E0001.mol2  1015_1GCZ_R01_S0001_C0000_L00017_S0001_C0036_G0010_E0001.mol2  1016_1GCZ_R01_S0001_C0000_L00017_S0001_C0037_G0010_E0001.mol2  1017_1GCZ_R01_S0001_C0000_L00017_S0001_C0037_G0010_E0001.mol2  1018_1GCZ_R01_S0001_C0000_L00017_S0001_C0038_G0010_E0001.mol2  1019_1GCZ_R01_S0001_C0000_L00017_S0001_C0038_G0010_E0001.mol2  101_1GCZ_R01_S0001_C0000_L00003_S0001_C0038_G0010_E0001.mol2  1020_1GCZ_R01_S0001_C0000_L00017_S0001_C0039_G0010_E0001.mol2  1021_1GCZ_R01_S0001_C0000_L00017_S0001_C0039_G0010_E0001.mol2  1022_1GCZ_R01_S0001_C0000_L00017_S0001_C0040_G0010_E0001.mol2  1023_1GCZ_R01_S0001_C0000_L00017_S0001_C0040_G0010_E0001.mol2  1024_1GCZ_R01_S0001_C0000_L00017_S0001_C0041_G0010_E0001.mol2  1025_1GCZ_R01_S0001_C0000_L00017_S0001_C0041_G0010_E0001.mol2  1026_1GCZ_R01_S0001_C0000_L00017_S0001_C0042_G0010_E0001.mol2  1027_1GCZ_R01_S0001_C0000_L00017_S0001_C0042_G0010_E0001.mol2  1028_1GCZ_R01_S0001_C0000_L00017_S0001_C0043_G0010_E0001.mol2  1029_1GCZ_R01_S0001_C0000_L00017_S0001_C0043_G0010_E0001.mol2  102_1GCZ_R01_S0001_C0000_L00003_S0001_C0039_G0010_E0001.mol2  1030_1GCZ_R01_S0001_C0000_L00017_S0001_C0044_G0010_E0001.mol2  1031_1GCZ_R01_S0001_C0000_L00017_S0001_C0044_G0010_E0001.mol2  1032_1GCZ_R01_S0001_C0000_L00017_S0001_C0045_G0010_E0001.mol2  1033_1GCZ_R01_S0001_C0000_L00017_S0001_C0045_G0010_E0001.mol2  1034_1GCZ_R01_S0001_C0000_L00017_S0001_C0046_G0010_E0001.mol2  1035_1GCZ_R01_S0001_C0000_L00017_S0001_C0046_G0010_E0001.mol2  (+2014 more)
miniBUDE.jl/: Manifest.toml  README.md
miniBUDE.jl/AMDGPU/: Manifest.toml  Project.toml
miniBUDE.jl/CUDA/: Manifest.toml
miniBUDE.jl/KernelAbstractions/: Project.toml
miniBUDE.jl/Threaded/: Manifest.toml
miniBUDE.jl/oneAPI/: Manifest.toml  Project.toml
miniBUDE.jl/src/: AMDGPU.jl  BUDE.jl  CUDA.jl  KernelAbstractions.jl  Threaded.jl  miniBUDE.jl  oneAPI.jl
openacc/: Makefile  README.md  bude.c  shared.h
opencl/: .gitignore  Makefile  README.md  bude.c  budeMultiTD.cl  budeMultiTD_no_nd.cl
openmp/: .gitignore  Makefile  README.md  bude.c  bude.h  vec-pose-inner.c
openmp-target/: Makefile  README.md  bude.c  make.deps  shared.h
src/: .clang-format  .gitignore  bude.h  ci-prepare-bionic.sh  ci-test-compile.sh  main.cpp  meta_build.h.in  meta_vcs.h.in
src/acc/: fasten.hpp  model.cmake
src/cuda/: fasten.hpp  model.cmake
src/hip/: fasten.hpp
src/julia/miniBUDE.jl/: Manifest.toml  Project.toml  README.md
src/julia/miniBUDE.jl/AMDGPU/: Manifest.toml
src/julia/miniBUDE.jl/CUDA/: Manifest.toml  Project.toml
src/julia/miniBUDE.jl/KernelAbstractions/: Manifest.toml
src/julia/miniBUDE.jl/Threaded/: Manifest.toml  Project.toml
src/julia/miniBUDE.jl/oneAPI/: Manifest.toml
src/julia/miniBUDE.jl/src/: AMDGPU.jl  KernelAbstractions.jl  oneAPI.jl
src/kokkos/: fasten.hpp  model.cmake
src/ocl/: fasten.hpp
src/omp/: fasten.hpp  model.cmake
src/raja/: fasten.hpp  model.cmake
src/serial/: fasten.hpp  model.cmake
src/std/: fasten.hpp  model.cmake
src/std-indices/: dpl_shim.h  fasten.hpp  model.cmake
src/std-ranges/: fasten.hpp  model.cmake
src/std20/: fasten.hpp  model.cmake
src/sycl/: fasten.hpp  fasten_bak.hpp
src/tbb/: fasten.hpp  model.cmake
src/thrust/: fasten.hpp  model.cmake
sycl/: CMakeLists.txt  README.md
sycl/src/: bude.cpp  bude.h  vec-pose-inner.cpp
